--- a/app/bookapp/webapp/i18n/i18n.properties
+++ b/app/bookapp/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=bookapp
+appTitle=bookapp using CI/CD
 
 #YDES: Application description
 appDescription=A Fiori application.
